新增遊戲行銷

--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="row mb-4">
             <div class="col-lg-3 col-6">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
@@ -171,7 +174,18 @@
                     </div>
                 </div>
             </div>
-
+            <div class="col-lg-3 col-6">
+                <div class="card h-100">
+                    <div class="card-body d-flex align-items-center">
+                        <a href="https://farawaygame2.000webhostapp.com/">
+                            <i class="fas fa-gamepad fa-3x d-none d-sm-block"></i></a>
+                        <div class="text-center w-100">
+                            <div class="h5">其他作品</div>
+                            <div>遊戲化行銷</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
