--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </nav>
 
     <div class="container-fluid mt-4 main">
-        <div class="row mb-4">
-            <div class="col-lg-3 col-6">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://reurl.cc/a2Vl7">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://reurl.cc/pO6Db">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://reurl.cc/6r5gr">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://reurl.cc/d6DrM">
@@ -71,8 +71,12 @@
             </div>
         </div>
 
-        <div class="row mb-4">
-            <div class="col-lg-3 col-6">
+
+
+
+
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://faraway520.github.io/SearchMonster/">
@@ -84,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://reurl.cc/VkL6Y">
@@ -96,7 +100,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://ztwkn3fvoo8xod8zjozzya-on.drv.tw/前端專案/超時空任務/signin.html">
@@ -108,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://ztwkn3fvoo8xod8zjozzya-on.drv.tw/前端專案/超時空任務/backstage.html">
@@ -122,8 +126,8 @@
             </div>
         </div>
 
-        <div class="row mb-4">
-            <div class="col-lg-3 col-6">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://reurl.cc/O9voy">
@@ -135,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://reurl.cc/gKDbN">
@@ -147,7 +151,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://reurl.cc/8djAy">
@@ -161,8 +165,8 @@
             </div>
         </div>
 
-        <div class="row mb-4">
-            <div class="col-lg-3 col-6">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://reurl.cc/e1D8Q">
@@ -174,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body d-flex align-items-center">
                         <a href="https://farawaygame2.000webhostapp.com/">
